[package]
name = "logos_cyber"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.34.2"
regex = "1.12.3"
reqwest = { version = "0.13.3", features = ["json", "socks"] }
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tokio = { version = "1.52.2", features = ["full"] }
walkdir = "2.5.0"
