[package]
name = "logos_cyber"
version = "0.1.0"
edition = "2024"
authors = ["olbin-dev"]
description = "LLM-Powered Nuclei Template Generator & Scanner written in Rust"
homepage = "https://github.com/olbin-dev/logos-cyber"
repository = "https://github.com/olbin-dev/logos-cyber"
license = "MIT"

[dependencies]
eframe = "0.21.3"
hex = "0.4"
rand = "0.8"
regex = "1.12.3"
reqwest = { version = "0.11.18", features = ["json", "socks", "cookies"] }
rfd = "0.11.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tokio = { version = "1.52.2", features = ["full"] }
dotenvy = "0.15"
toml = "0.8"
url = "2"
walkdir = "2.5.0"
termcolor = "1.4"

[dev-dependencies]
tokio = { version = "1.52.2", features = ["full", "macros", "rt-multi-thread"] }
